# nexthire

./: .gitignore  README.md  package-lock.json  pyproject.toml
ai_service/: main.py  pyproject.toml
ai_service/models/: schemas.py
ai_service/routes/: analyzer.py
ai_service/services/: groq_client.py  jsonres.md  pdf_parser.py  prompt_builder.py
backend/analyzer/: admin.py  models.py  urls.py  views.py
backend/analyzer/migrations/: 0001_initial.py  0002_alter_resumeanalysis_user.py
backend/applications/: models.py  serializers.py  tests.py  urls.py  views.py
backend/applications/migrations/: 0001_initial.py  0002_reminder.py  0003_alter_jobapplication_status.py  0004_jobapplication_created_at_jobapplication_salary.py  0005_alter_jobapplication_application_date.py  0006_alter_reminder_options_rename_task_reminder_title_and_more.py
backend/core/: settings.py  urls.py
backend/users/: backends.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AppLayout.jsx  FilterPanel.jsx  SidebarToggle.jsx  ThemeToggle.jsx
frontend/src/context/: ProfileContext.jsx  ThemeContext.jsx  profile-context.js  useProfile.js  useTheme.js
frontend/src/pages/: AddApplication.jsx  AddReminder.jsx  Analyzer.jsx  Applications.jsx  Dashboard.jsx  Landing.jsx  Login.jsx  Performance.jsx  Profile.jsx  Register.jsx  Reminders.jsx
